# gtest-and-coverage

./: CMakeLists.txt  make_all.sh
include/: utility.h
src/: utility.cpp
test/: unit_test.cpp
